trial and error ' '

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -107,7 +107,7 @@
     <!-- Modals -->
 
     <!-- contact -->
-    <div id="email" class="modal custom-modal">
+    <!-- <div id="email" class="modal custom-modal">
       <div class="modal-content">
         <div class="row">
           <h4>Contact Information</h4>
@@ -119,7 +119,7 @@
 
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!--schedule -->
     <div id="scheduling" class="modal custom-modal">
