fixed fatal server error

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -107,21 +107,20 @@
     <!-- Modals -->
 
     <!-- contact -->
-    <!-- <div id="email" class="modal custom-modal">
+    <div id="email" class="modal ">
       <div class="modal-content">
         <div class="row">
           <h4>Contact Information</h4>
           <p><b>Phone: </b> (602) 277-8228</p>
           <p><b>Scheduling:</b> dlegge@smoadr.com</p>
-          <p><b><%= partners[0].title %> <%= partners[0].first_name %> <%= partners[0].middle_initial %>. <%=partners[0].last_name %>:</b> <%= partners[0].email %></p>
-          <p><b><%= partners[1].title %> <%= partners[1].first_name %> <%= partners[1].middle_initial %>. <%=partners[1].last_name %>:</b> <%= partners[1].email %></p>
-          <p><b><%= partners[2].title %> <%= partners[2].first_name %> <%= partners[2].middle_initial %>. <%=partners[2].last_name %>:</b> <%= partners[2].email %></p>
-
+          <p><b>Hon. Christopher M. Skelly: </b>cskelly@smoadr.com </p>
+          <p><b>Charles J. Muchmore: </b>cmuchmore@smoadr.com </p>
+          <p><b>Hon. Robert H. Oberbillig: </b>roberbillig@smoadr.com </p>
         </div>
       </div>
-    </div> -->
+    </div>
 
-    <!--schedule -->
+    <!-- schedule -->
     <div id="scheduling" class="modal custom-modal">
       <div class="modal-content">
         <div class="row ">
