--- a/views/index.ejs
+++ b/views/index.ejs
@@ -265,7 +265,7 @@
   <!-- Modals -->
 
   <!-- contact -->
-  <div id="email" class="modal custom-modal">
+  <div id="email" class="modal ">
     <div class="modal-content">
       <div class="row">
         <h4>Contact Information</h4>
