changed partner to home on partner page moble menu

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -60,7 +60,7 @@
     <nav class="blue hide-on-med-and-up">
       <div class="nav-wrapper ">
         <ul id="slide-out" class="side-nav left hide-on-med-and-up">
-          <li><a href="/#partners"><span class=" name">Partners</a></li>
+          <li><a href="/"><span class=" name">Home</a></li>
           <li><a href="#email" class="modal-trigger">Contact Us</a></li>
           <li><a href="#scheduling" class="modal-trigger"><span class=" email">Online Scheduling</a></li>
           <li><a href="/#location">location</a></li>
@@ -88,7 +88,7 @@
       </div>
 
       <!-- bio -->
-      <div class="col s12 m8 ">
+      <div class="col s12 m7 ">
         <%for(let i = 0; i < bio.length; i++){%>
           <div class="col s12">
             <p><%= bio[i].paragraph %></p>
