added unstyled content to frontfacing site

--- a/src/client/scss/application.scss
+++ b/src/client/scss/application.scss
@@ -8,6 +8,7 @@
 @import "base/utilities";
 
 @import "components/navBar";
+@import "components/members";
 
 @import "pages/home";
 @import "pages/profile";
