--- a/src/client/scss/base/_typeography.scss
+++ b/src/client/scss/base/_typeography.scss
@@ -23,13 +23,13 @@
   
   &--top {
     
-    font-size: 8.5em;
+    font-size: 4.5vw;
     
   }
 
   &--bottom{
 
-    font-size: 8em;
+    font-size: 4.25vw;
     letter-spacing: .075em;
     border-top: 1px solid white;
 
